# syscall-limiter

./: .clangd  .gitignore  CMakeLists.txt  README.md
benchmarks/: fork_test.cpp  getdents_test.cpp  openat_syscall.cpp  pid_lookup.cpp  set_as_map_key.cpp  test.cpp  test2.cpp  test_syscall.cpp  test_syscall2.cpp  write_speed.cpp
src/: main.cpp
src/Logger/: Logger.h
src/ProcessManager/: ProcessManager.cpp  ProcessManager.h
src/SocketBridge/: SocketBridge.cpp  SocketBridge.h
src/Supervisor/Manager/: Supervisor.cpp  Supervisor.h
src/Supervisor/handlers/: handlers.cpp  handlers.h
src/assistance/: assistance.cpp  assistance.h
src/gui/: ProcessInfo.h
src/gui/AddProcessW/: AddProcessW.cpp  AddProcessW.h
src/gui/AddProcessW/configs/: configs.cpp  configs.h
src/gui/AddSyscallsW/: AddSyscallsW.cpp  AddSyscallsW.h
src/gui/MainW/: MainW.cpp  MainW.h
src/gui/ProcOutputW/: ProcOutputW.cpp  ProcOutputW.h
src/logic/Logger/: Logger.cpp  Logger.h
src/logic/ProcessManager/: ProcessManager.cpp  ProcessManager.h
src/logic/ProcessManager/PM/: ProcessManager.cpp  ProcessManager.h
src/logic/ProcessManager/PMManySupervisors/: PMManySupervisors.cpp  PMManySupervisors.h
src/logic/ProcessManager/PMSingleSupervisor/: PMSingleSupervisor.cpp  PMSingleSupervisor.h
src/logic/SocketBridge/: SocketBridge.cpp  SocketBridge.h
src/logic/Supervisor/Manager/: Supervisor.cpp  Supervisor.h
src/logic/Supervisor/Manager/ManyProcessesSP/: ManyProcessesSP.cpp  ManyProcessesSP.h
src/logic/Supervisor/Manager/OneProcessSP/: OneProcessSP.cpp  OneProcessSP.h
src/logic/Supervisor/Manager/Supervisor/: Supervisor.cpp  Supervisor.h
src/logic/Supervisor/handlers/: handlers.cpp  handlers.h
src/logic/rules/: rules.h
src/logic/seccomp/: seccomp.cpp  seccomp.h
src/rules/: rules.h
src/seccomp/: seccomp.cpp  seccomp.h
src/supervised_p/: supervised_p.cpp  supervised_p.h
src/supervisor/: supervisor.cpp  supervisor.h
tests/: fork_test.cpp  getdents_test.cpp  mem_limit_go.go  mem_limit_test.cpp  pid_lookup.cpp  test.cpp  test2.cpp  thread_creation.cpp  thread_pid.cpp  threads_test.cpp  virtual_vs_usual.cpp  write_speed.cpp
tests/paper_tests/: cpu_limit  cpu_limit.go  fork_test.cpp  linkat.cpp  mem_limit.cpp  openat.cpp  read.cpp  rename.cpp  sendfile.cpp  unlink.cpp
